# AceSense

./: .gitignore  App.tsx  README.md  analysis.html  constants.js  constants.ts  index.html  metadata.json  package.json  profile.html  types.ts  upload.html
backend/: crud.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  constants.jsx  main.jsx
client/src/components/: BottomNavigation.jsx  Button.jsx
client/src/pages/: analysis.jsx  home.jsx  profile.jsx  upload.jsx
components/: BottomNavigation.js  BottomNavigation.tsx  Button.js  Button.tsx
ios-swift/: AceSenseRootView.swift  AceSenseUICommon.swift  AnalysisView.swift  AppState.swift  COS_IMAGE_URL_TEMPLATE.md  Constants.swift  HomeView.swift  ProfileView.swift  UploadView.swift
pages/: analysis.js  home.js  profile.js  upload.js
views/: AnalysisResults.tsx  Home.tsx  Profile.tsx  Upload.tsx
