[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.133.1",
    "opencv-python>=4.13.0.92",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.47",
    "ultralytics>=8.4.17",
    "uvicorn[standard]>=0.41.0",
]
